add report endpoints
